# dex-arbitrage-demo

./: LICENSE  README.md  package-lock.json  package.json  sim_spreads.json
components/: arbitrageMonitor.js  dexPriceFetcherBase.js  dexPriceFetcherV2.js  dexPriceFetcherV3.js  initArbEngineCore.js  runEngineEntryPoint.js
components/types/: amm-kinds.js
config/: liquidityPool.js
perf-viewer/src/: perf_metrics.json
rust/: Cargo.toml  config.json  pools_to_arbitrage.json
rust/src/: context.rs  main.rs
rust/src/pools_abi/: erc20_abi.rs  mod.rs  uniswap_v2_pair.rs  uniswap_v2_reservers.rs  uniswap_v3_liquidity.rs  uniswap_v3_slot0.rs
rust/src/simulator/: mod.rs  v2.rs  v3.rs
rust/src/threads/: mod.rs  simulate_trade_loop_v2.rs  simulate_trade_loop_v3.rs
