[package]
name = "rust"
version = "0.1.0"
edition = "2021" # (оставь 2021 — с 2024 ещё бывают проблемы с wasm)

[dependencies]
tokio = { version = "1", features = ["full"] }
ethers = { version = "2", features = ["abigen"] }
dotenv = "0.15"
rust_decimal = "1.37.1"
anyhow = "1.0.98"
log = "0.4"
env_logger = "0.11.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
futures = "0.3"
toml = "0.8"
notify = "8"
bigdecimal = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
web3 = "=0.19.0"

wasm-bindgen = "0.2"
js-sys = "0.3"
ethers-contract-abigen = "2.0.14"

[profile.release]
opt-level = "z"
lto = true
